--- a/index.html
+++ b/index.html
@@ -6,30 +6,64 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/general.css" />
+    <link rel="stylesheet" href="./css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Paprika&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header> 
-        <nav class="">
-          <div class="container d-flex space-between align-center">
-            <div class="logo">
-              <img src="./images/logo.png" alt="" />
-            </div>
-              <ul class="nav-list d-flex align-center">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Service</a></li>
-                <li><a href="#">Poftfolio</a></li>
-                <li><a href="#">Price</a></li>
-                <li><a href="#">Blog</a></li>
-                <li class="margin-left btn"><a href="#">Contact Us</a></li>
-              </ul>
+    <header>
+      <nav class="">
+        <div class="container d-flex space-between align-center">
+          <div class="logo">
+            <img src="./images/logo.png" alt="" />
+          </div>
+          <ul class="nav-list d-flex align-center space-between">
+            <li><a href="#">Home <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+            <li><a href="#">About <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+            <li><a href="#">Service <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+            <li><a href="#">Poftfolio <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+            <li><a href="#">Price <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+            <li><a href="#">Blog <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+            <li><a class="margin-left btn" href="#">Contact Us</a></li>
+          </ul>
         </div>
-        </nav>
+      </nav>
+      <div class="container d-flex align-center flex-column justify-center">
+        <h1><span>You're Unique. Your</span> Website Should be too</h1>
+        <p>
+        <span>A beautiful website passionately crafted for your small</span> <span>business. Our
+          Digital Agency development has changed<span> the way brands and businesses
+          use technology for <span>growing business.</span>
+        </p>
+
+        <div class="buttons d-flex">
+          <a href="" class="btn">Get Free Quoto</a>
+          <a href="" class="btn margin-left-sm">Learn More</a>
+        </div>
       </div>
     </header>
     <main>
-      <section>
-        <div class="container"></div>
+      <section class="section-price">
+        <div class="container">
+          <div class="top-bar"></div>
+          <div class="prices d-grid space-between align-center">
+            <div>
+              <span class="price">53k</span>
+              <span>Happy client</span>
+            </div>
+            <div>
+              <span class="price">53k</span>
+              <span>Happy client</span>
+            </div>
+            <div>
+              <span class="price">120</span>
+              <span>Happy client</span>
+            </div>
+            <div>
+              <span class="price">53k</span>
+              <span>Happy client</span>
+            </div>
+          </div>
+        </div>
       </section>
       <section>
         <div class="container"></div>
