section price almost done

--- a/index.html
+++ b/index.html
@@ -44,15 +44,24 @@
     <main>
       <section class="section-price">
         <div class="container">
-          <div class="top-bar"></div>
-          <div class="prices d-grid space-between align-center">
+          <div class="top-bar d-grid grid--4-cols">
+            <div>
+              <img src="./images/price/cli.jpeg" alt="">
+            </div>
+            <div>
+              <img src="./images/price/pro-1.jpeg" alt="">
+            </div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="prices d-grid grid--4-cols">
             <div>
               <span class="price">53k</span>
               <span>Happy client</span>
             </div>
             <div>
-              <span class="price">53k</span>
-              <span>Happy client</span>
+              <span class="price">10k</span>
+              <span>Projects Done</span>
             </div>
             <div>
               <span class="price">120</span>
