--- a/index.html
+++ b/index.html
@@ -74,8 +74,11 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="container"></div>
+      <section class="section-why">
+        <div class="container">
+          <div class="left-bar"></div>
+          <div class="right-bar"></div>
+        </div>
       </section>
       <section>
         <div class="container"></div>
