--- a/index.html
+++ b/index.html
@@ -75,9 +75,17 @@
         </div>
       </section>
       <section class="section-why">
-        <div class="container">
-          <div class="left-bar"></div>
-          <div class="right-bar"></div>
+        <div class="container d-grid grid--2-cols">
+          <div class="left-bar">
+            <p>We solve real-world problems through people and the web</p>
+            <p>We make processes and technoloty work efficiently together</p>
+            <p>We advance improve existing technoloty through research and development</p>
+            <p>We develop long-lasting and scalable solutions, relationsihips partnerships</p>
+          </div>
+          <div class="right-bar">
+            <h2>Why Choose Us</h2>
+            <p>We are now a team of strategists, engineers, designers, and marketers who both use and develop technology for a variety of client needs.</p>
+          </div>
         </div>
       </section>
       <section>
