--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </nav>
       <div class="container d-flex align-center flex-column justify-center">
-        <h1><span>You're Unique. Your</span> Website Should be too</h1>
+        <h1 class="heading-primary"><span>You're Unique. Your</span> Website Should be too</h1>
         <p>
         <span>A beautiful website passionately crafted for your small</span> <span>business. Our
           Digital Agency development has changed<span> the way brands and businesses
@@ -46,10 +46,10 @@
         <div class="container">
           <div class="top-bar d-grid grid--4-cols">
             <div>
-              <img src="./images/price/cli.jpeg" alt="">
+              <!-- <img src="./images/price/cli.jpeg" alt=""> -->
             </div>
             <div>
-              <img src="./images/price/pro-1.jpeg" alt="">
+              <!-- <img src="./images/price/pro-1.jpeg" alt=""> -->
             </div>
             <div></div>
             <div></div>
@@ -76,15 +76,16 @@
       </section>
       <section class="section-why">
         <div class="container d-grid grid--2-cols">
-          <div class="left-bar d-flex flex-column justify-center-left align-items-start">
-            <p>We solve real-world problems through people and the web</p>
-            <p>We make processes and technoloty work efficiently together</p>
-            <p>We advance improve existing technoloty through research and development</p>
-            <p>We develop long-lasting and scalable solutions, relationsihips partnerships</p>
+          <div class="left-bar d-flex flex-column align-items-start">
+            <p><span>We solve real-world problems</span> <span>through people and the web</span></p>
+            <p><span>We make processes and technoloty</span><span> work efficiently together</span></p>
+            <p><span>We advance improve existing</span><span> technoloty through research and </span><span>development</span></p>
+            <p><span>We develop long-lasting and</span><span> scalable solutions, relationsihips</span><span> partnerships</span></p>
           </div>
-          <div class="right-bar d-flex flex-column justify-center-left align-items-start">
-            <h2>Why Choose Us</h2>
-            <p>We are now a team of strategists, engineers, designers, and marketers who both use and develop technology for a variety of client needs.</p>
+          <div class="right-bar d-flex flex-column align-items-start">
+            <h2 class="heading-secondary">Why Choose Us</h2>
+            <p><span>We are now a team of strategists,<span> </span>engineers, designers, and marketers who</span> <span>both use and develop technology for a</span> <span>variety of client needs.</span></p>
+            <p class="btn">Contact Us</p>
           </div>
         </div>
       </section>
