--- a/index.html
+++ b/index.html
@@ -89,8 +89,47 @@
           </div>
         </div>
       </section>
-      <section>
-        <div class="container"></div>
+      <section class="section-service">
+        <div class="container">
+          <div class="services d-grid grid--3-cols">
+            <div class="about d-flex flex-column align-items-start">
+              <h2 class="heading-secondary">What we Do</h2>
+              <p><span>We are now a team of strategists,</span> <span>engineers, designers, and marketers </span> <span>who both use and develop technology </span> <span>for a variety of client needs.</span></p>
+              <a class="btn">Contact Us</a>
+            </div>
+            <div class="service">
+              <img src="./images/service/web-design-1.png" alt="">
+              <h3>web Design & Dev </h3>
+              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
+              <a href="" class="btn--secondary">Read more</a>
+            </div>
+            <div class="service">
+              <img src="./images/service/growth-1.png" alt="">
+              <h3>Software Dev</h3>
+              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
+              <a href="" class="btn--secondary">Read more</a>
+            </div>
+            <div class="service">
+              <img src="./images/service/social-marketing.png" alt="">
+              <h3>Content Writing</h3>
+              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
+              <a href="" class="btn--secondary">Read more</a>
+            </div>
+            <div class="service">
+              <img src="./images/service/social-media-1.png" alt="">
+              <h3>Digital Marketing</h3>
+              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
+              <a href="" class="btn--secondary">Read more</a>
+            </div>
+            <div class="service">
+              <img src="./images/service/presentation.png" alt="">
+              <h3>Support & Training</h3>
+              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
+              <a href="" class="btn--secondary">Read more</a>
+            </div>
+          </div>
+
+        </div>
       </section>
       <section>
         <div class="container"></div>
