section-impact start

--- a/index.html
+++ b/index.html
@@ -1,148 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="stylesheet" href="./css/general.css" />
-    <link rel="stylesheet" href="./css/all.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Paprika&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <header>
-      <nav class="">
-        <div class="container d-flex space-between align-center">
-          <div class="logo">
-            <img src="./images/logo.png" alt="" />
-          </div>
-          <ul class="nav-list d-flex align-center space-between">
-            <li><a href="#">Home <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
-            <li><a href="#">About <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
-            <li><a href="#">Service <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
-            <li><a href="#">Poftfolio <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
-            <li><a href="#">Price <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
-            <li><a href="#">Blog <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
-            <li><a class="margin-left btn" href="#">Contact Us</a></li>
-          </ul>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./css/general.css" />
+  <link rel="stylesheet" href="./css/all.min.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Paprika&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <header>
+    <nav class="">
+      <div class="container d-flex space-between align-center">
+        <div class="logo">
+          <img src="./images/logo.png" alt="" />
         </div>
-      </nav>
-      <div class="container d-flex align-center flex-column justify-center">
-        <h1 class="heading-primary"><span>You're Unique. Your</span> Website Should be too</h1>
-        <p>
+        <ul class="nav-list d-flex align-center space-between">
+          <li><a href="#">Home <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+          <li><a href="#">About <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+          <li><a href="#">Service <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+          <li><a href="#">Poftfolio <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+          <li><a href="#">Price <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+          <li><a href="#">Blog <i class="fa-duotone fa-regular fa-angle-down"></i></a></li>
+          <li><a class="margin-left btn" href="#">Contact Us</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container d-flex align-center flex-column justify-center">
+      <h1 class="heading-primary"><span>You're Unique. Your</span> Website Should be too</h1>
+      <p class="description">
         <span>A beautiful website passionately crafted for your small</span> <span>business. Our
           Digital Agency development has changed<span> the way brands and businesses
-          use technology for <span>growing business.</span>
-        </p>
+            use technology for <span>growing business.</span>
+      </p>
 
-        <div class="buttons d-flex">
-          <a href="" class="btn">Get Free Quoto</a>
-          <a href="" class="btn margin-left-sm">Learn More</a>
+      <div class="buttons d-flex">
+        <a href="" class="btn">Get Free Quoto</a>
+        <a href="" class="btn margin-left-sm">Learn More</a>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="section-price">
+      <div class="container">
+        <div class="top-bar d-grid grid--4-cols">
+          <div>
+            <!-- <img src="./images/price/cli.jpeg" alt=""> -->
+          </div>
+          <div>
+            <!-- <img src="./images/price/pro-1.jpeg" alt=""> -->
+          </div>
+          <div></div>
+          <div></div>
+        </div>
+        <div class="prices d-grid grid--4-cols">
+          <div>
+            <span class="price">53k</span>
+            <span>Happy client</span>
+          </div>
+          <div>
+            <span class="price">10k</span>
+            <span>Projects Done</span>
+          </div>
+          <div>
+            <span class="price">120</span>
+            <span>Happy client</span>
+          </div>
+          <div>
+            <span class="price">53k</span>
+            <span>Happy client</span>
+          </div>
         </div>
       </div>
-    </header>
-    <main>
-      <section class="section-price">
-        <div class="container">
-          <div class="top-bar d-grid grid--4-cols">
-            <div>
-              <!-- <img src="./images/price/cli.jpeg" alt=""> -->
-            </div>
-            <div>
-              <!-- <img src="./images/price/pro-1.jpeg" alt=""> -->
-            </div>
-            <div></div>
-            <div></div>
+    </section>
+    <section class="section-why">
+      <div class="container d-grid grid--2-cols">
+        <div class="left-bar d-flex flex-column align-items-start">
+          <p class="description"><span>We solve real-world problems</span> <span>through people and the web</span></p>
+          <p class="description"><span>We make processes and technoloty</span><span> work efficiently together</span>
+          </p>
+          <p class="description"><span>We advance improve existing</span><span> technoloty through research and
+            </span><span>development</span></p>
+          <p class="description"><span>We develop long-lasting and</span><span> scalable solutions,
+              relationsihips</span><span> partnerships</span></p>
+        </div>
+        <div class="right-bar d-flex flex-column align-items-start">
+          <h2 class="heading-secondary">Why Choose Us</h2>
+          <p><span>We are now a team of strategists,<span> </span>engineers, designers, and marketers who</span>
+            <span>both use and develop technology for a</span> <span>variety of client needs.</span></p>
+          <p class="btn">Contact Us</p>
+        </div>
+      </div>
+    </section>
+    <section class="section-service">
+      <div class="container">
+        <div class="services d-grid grid--3-cols">
+          <div class="about d-flex flex-column align-items-start">
+            <h2 class="heading-secondary">What we Do</h2>
+            <p><span>We are now a team of strategists,</span> <span>engineers, designers, and marketers </span>
+              <span>who both use and develop technology </span> <span>for a variety of client needs.</span></p>
+            <a class="btn">Contact Us</a>
           </div>
-          <div class="prices d-grid grid--4-cols">
-            <div>
-              <span class="price">53k</span>
-              <span>Happy client</span>
-            </div>
-            <div>
-              <span class="price">10k</span>
-              <span>Projects Done</span>
-            </div>
-            <div>
-              <span class="price">120</span>
-              <span>Happy client</span>
-            </div>
-            <div>
-              <span class="price">53k</span>
-              <span>Happy client</span>
-            </div>
+          <div class="service">
+            <img src="./images/service/web-design-1.png" alt="">
+            <h3>web Design & Dev </h3>
+            <p class="description"><span>Social Media has changed</span><span> the way we interact & do</span><span>
+                business while creating</span></p>
+            <a href="" class="btn--secondary">Read more</a>
+          </div>
+          <div class="service">
+            <img src="./images/service/growth-1.png" alt="">
+            <h3>Software Dev</h3>
+            <p class="description"><span>Social Media has changed</span><span> the way we interact & do</span><span>
+                business while creating</span></p>
+            <a href="" class="btn--secondary">Read more</a>
+          </div>
+          <div class="service">
+            <img src="./images/service/social-marketing.png" alt="">
+            <h3>Content Writing</h3>
+            <p class="description"><span>Social Media has changed</span><span> the way we interact & do</span><span>
+                business while creating</span></p>
+            <a href="" class="btn--secondary">Read more</a>
+          </div>
+          <div class="service">
+            <img src="./images/service/social-media-1.png" alt="">
+            <h3>Digital Marketing</h3>
+            <p class="description"><span>Social Media has changed</span><span> the way we interact & do</span><span>
+                business while creating</span></p>
+            <a href="" class="btn--secondary">Read more</a>
+          </div>
+          <div class="service">
+            <img src="./images/service/presentation.png" alt="">
+            <h3>Support & Training</h3>
+            <p class="description"><span>Social Media has changed</span><span> the way we interact & do</span><span>
+                business while creating</span></p>
+            <a href="" class="btn--secondary">Read more</a>
           </div>
         </div>
-      </section>
-      <section class="section-why">
-        <div class="container d-grid grid--2-cols">
-          <div class="left-bar d-flex flex-column align-items-start">
-            <p><span>We solve real-world problems</span> <span>through people and the web</span></p>
-            <p><span>We make processes and technoloty</span><span> work efficiently together</span></p>
-            <p><span>We advance improve existing</span><span> technoloty through research and </span><span>development</span></p>
-            <p><span>We develop long-lasting and</span><span> scalable solutions, relationsihips</span><span> partnerships</span></p>
-          </div>
-          <div class="right-bar d-flex flex-column align-items-start">
-            <h2 class="heading-secondary">Why Choose Us</h2>
-            <p><span>We are now a team of strategists,<span> </span>engineers, designers, and marketers who</span> <span>both use and develop technology for a</span> <span>variety of client needs.</span></p>
-            <p class="btn">Contact Us</p>
-          </div>
-        </div>
-      </section>
-      <section class="section-service">
-        <div class="container">
-          <div class="services d-grid grid--3-cols">
-            <div class="about d-flex flex-column align-items-start">
-              <h2 class="heading-secondary">What we Do</h2>
-              <p><span>We are now a team of strategists,</span> <span>engineers, designers, and marketers </span> <span>who both use and develop technology </span> <span>for a variety of client needs.</span></p>
-              <a class="btn">Contact Us</a>
-            </div>
-            <div class="service">
-              <img src="./images/service/web-design-1.png" alt="">
-              <h3>web Design & Dev </h3>
-              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
-              <a href="" class="btn--secondary">Read more</a>
-            </div>
-            <div class="service">
-              <img src="./images/service/growth-1.png" alt="">
-              <h3>Software Dev</h3>
-              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
-              <a href="" class="btn--secondary">Read more</a>
-            </div>
-            <div class="service">
-              <img src="./images/service/social-marketing.png" alt="">
-              <h3>Content Writing</h3>
-              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
-              <a href="" class="btn--secondary">Read more</a>
-            </div>
-            <div class="service">
-              <img src="./images/service/social-media-1.png" alt="">
-              <h3>Digital Marketing</h3>
-              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
-              <a href="" class="btn--secondary">Read more</a>
-            </div>
-            <div class="service">
-              <img src="./images/service/presentation.png" alt="">
-              <h3>Support & Training</h3>
-              <p><span>Social Media has changed</span><span> the way we interact & do</span><span> business while creating</span></p>
-              <a href="" class="btn--secondary">Read more</a>
-            </div>
-          </div>
 
+      </div>
+    </section>
+    <section class="section-impact">
+      <div class="container">
+        <div class="header-content"></div>
+        <h2 class="heading-secondary">We create real impact</h2>
+        <p class="description"><span>We design, build and support websites and apps for</span><span> clients worldwide.
+            Create beautiful, eye-catching on-page</span><span> messages without the need for a developer</span>.
+        </p>
+
+        <div class="bottom-content  d-grid grid--2-cols">
+          <div class="impact-contant">
+            <div class="text-content">
+              <div class="card d-flex">
+                <div class="icon">
+                  <img src="./images/impact/icon.png" alt="কম্পিটিটিভ অ্যানালাইসিস">
+                </div>
+                <div class="text-content">
+                  <h2 class="title">Competitive analysis</h2>
+                  <p class="description">With an all-new look and powerful features, Ekko is the best way to ensure
+                    success for your business.</p>
+                </div>
+              </div>
+
+              <div class="card d-flex">
+                <div class="icon">
+                  <img src="./images/impact/icon-1.png" alt="স্ট্র্যাটেজি এবং রিসার্চ">
+                </div>
+                <div class="text-content">
+                  <h2 class="title">Strategy And research</h2>
+                  <p class="description">Save money and start building your website using the best tools available on
+                    the market today.</p>
+                </div>
+              </div>
+
+            </div>
+
+
+          </div>
+          <div class="img-content">
+            <img src="./images/impact/images.png" alt="">
+          </div>
         </div>
-      </section>
-      <section>
-        <div class="container"></div>
-      </section>
-      <section>
-        <div class="container"></div>
-      </section>
-      <section>
-        <div class="container"></div>
-      </section>
-    </main>
-    <footer>
+      </div>
+    </section>
+    <section>
       <div class="container"></div>
-    </footer>
-  </body>
+    </section>
+    <section>
+      <div class="container"></div>
+    </section>
+  </main>
+  <footer>
+    <div class="container"></div>
+  </footer>
+</body>
+
 </html>
