section-impact almost done

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div class="right-bar d-flex flex-column align-items-start">
           <h2 class="heading-secondary">Why Choose Us</h2>
           <p><span>We are now a team of strategists,<span> </span>engineers, designers, and marketers who</span>
-            <span>both use and develop technology for a</span> <span>variety of client needs.</span></p>
+            <span>both use and develop technology for a</span> <span>variety of client needs.</span>
+          </p>
           <p class="btn">Contact Us</p>
         </div>
       </div>
@@ -103,7 +104,8 @@
           <div class="about d-flex flex-column align-items-start">
             <h2 class="heading-secondary">What we Do</h2>
             <p><span>We are now a team of strategists,</span> <span>engineers, designers, and marketers </span>
-              <span>who both use and develop technology </span> <span>for a variety of client needs.</span></p>
+              <span>who both use and develop technology </span> <span>for a variety of client needs.</span>
+            </p>
             <a class="btn">Contact Us</a>
           </div>
           <div class="service">
@@ -147,12 +149,13 @@
     </section>
     <section class="section-impact">
       <div class="container">
-        <div class="header-content"></div>
-        <h2 class="heading-secondary">We create real impact</h2>
-        <p class="description"><span>We design, build and support websites and apps for</span><span> clients worldwide.
-            Create beautiful, eye-catching on-page</span><span> messages without the need for a developer</span>.
-        </p>
-
+        <div class="header-content">
+          <h2 class="heading-secondary text-align-center">We create real impact</h2>
+          <p class="description"><span>We design, build and support websites and apps for</span><span> clients
+              worldwide.
+              Create beautiful, eye-catching on-page</span><span> messages without the need for a developer</span>.
+          </p>
+        </div>
         <div class="bottom-content  d-grid grid--2-cols">
           <div class="impact-contant">
             <div class="text-content">
@@ -162,8 +165,9 @@
                 </div>
                 <div class="text-content">
                   <h2 class="title">Competitive analysis</h2>
-                  <p class="description">With an all-new look and powerful features, Ekko is the best way to ensure
-                    success for your business.</p>
+                  <p class="description text-align-left"><span>With an all-new look and powerful</span><span> features,
+                      Ekko is the best way to</span><span> ensure
+                      success for your business.</span></p>
                 </div>
               </div>
 
@@ -173,8 +177,9 @@
                 </div>
                 <div class="text-content">
                   <h2 class="title">Strategy And research</h2>
-                  <p class="description">Save money and start building your website using the best tools available on
-                    the market today.</p>
+                  <p class="description text-align-left"><span>Save money and start building</span><span> your website
+                      using the best</span><span> tools available on
+                      the market</span> <span>today.</span></p>
                 </div>
               </div>
 
