section plane almost done

--- a/index.html
+++ b/index.html
@@ -195,34 +195,37 @@
     </section>
     <section class="section-plan">
       <div class="container">
-        <h2 class="heading-secondary text-align-center">We create real impact</h2>
+        <h2 class="heading-secondary text-align-center">Choose The Right Plan</h2>
         <div class="cards d-grid grid--3-cols">
           <div class="card">
             <h1 class="heading-quaternary text-align-center">Basic</h1>
-            <p class="description"> 
+            <img src="./images/plane/001.png" alt="">
+            <p class="description">
               <span>Responsive Design</span>
-            <span>Dynamic Elements</span>
-          <span>Service Pages</span>
-        </span>Custom Design & Features</span>
-      </p>
+              <span>Dynamic Elements</span>
+              <span>Service Pages</span>
+              </span>Custom Design & Features</span>
+            </p>
           </div>
           <div class="card">
             <h1 class="heading-quaternary text-align-center">Professional</h1>
-            <p class="description"> 
+            <img src="./images/plane/002.png" alt="">
+            <p class="description">
               <span>Responsive Design</span>
-            <span>Dynamic Elements</span>
-          <span>Service Pages</span>
-        </span>Custom Design & Features</span>
-      </p>
+              <span>Dynamic Elements</span>
+              <span>Service Pages</span>
+              </span>Custom Design & Features</span>
+            </p>
           </div>
           <div class="card">
             <h1 class="heading-quaternary text-align-center">Exclusive</h1>
-            <p class="description"> 
+            <img src="./images/plane/003.png" alt="">
+            <p class="description">
               <span>Responsive Design</span>
-            <span>Dynamic Elements</span>
-          <span>Service Pages</span>
-        </span>Custom Design & Features</span>
-      </p>
+              <span>Dynamic Elements</span>
+              <span>Service Pages</span>
+              </span>Custom Design & Features</span>
+            </p>
           </div>
         </div>
       </div>
