section about us start

--- a/index.html
+++ b/index.html
@@ -230,8 +230,15 @@
         </div>
       </div>
     </section>
-    <section>
-      <div class="container"></div>
+    <section class="section-about-us">
+      <div class="container">
+        <h2 class="heading-secondary text-align-center">What The People Thinks About Us</h2>
+        <div class="slider">
+          <img src="./images/about-us/001.png" alt="">
+          <p class="description"><span>Lesser Replenish bearing they’re him cattle kind dominion. You</span><span>which fill place. Land she’d subdue divided gathering blessed</span><span>seasons it. Without, wherein days.</span></p> 
+          <h3 class="heading-quaternary text-align-center">Lukan Depina</h3>
+        </div>
+      </div>
     </section>
   </main>
   <footer>
