--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
           <img src="./images/about-us/001.png" alt="">
           <p class="description"><span>Lesser Replenish bearing they’re him cattle kind dominion. You</span><span>which fill place. Land she’d subdue divided gathering blessed</span><span>seasons it. Without, wherein days.</span></p> 
           <h3 class="heading-quaternary text-align-center">Lukan Depina</h3>
+          <p>Ceo And Head of Idea</p>
         </div>
       </div>
     </section>
