update about us

--- a/index.html
+++ b/index.html
@@ -233,11 +233,24 @@
     <section class="section-about-us">
       <div class="container">
         <h2 class="heading-secondary text-align-center">What The People Thinks About Us</h2>
-        <div class="slider">
-          <img src="./images/about-us/001.png" alt="">
-          <p class="description"><span>Lesser Replenish bearing they’re him cattle kind dominion. You</span><span>which fill place. Land she’d subdue divided gathering blessed</span><span>seasons it. Without, wherein days.</span></p> 
-          <h3 class="heading-quaternary text-align-center">Lukan Depina</h3>
-          <p>Ceo And Head of Idea</p>
+
+        <div class="slider-angel d-flex align-items-center">
+          <i class="fa-solid fa-angle-left"></i>
+          <div class="slider text-align-center">
+            <img src="./images/about-us/001.png" alt="">
+            <div class="star-icon">
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+              <i class="fa-solid fa-star"></i>
+            </div>
+            <p class="description"><span>Lesser Replenish bearing they’re him cattle kind dominion.
+                You</span><span>which fill place. Land she’d subdue divided gathering blessed</span><span>seasons it.
+                Without, wherein days.</span></p>
+            <h3 class="heading-quaternary text-align-center">Lukan Depina</h3>
+            <p>Ceo And Head of Idea</p>
+          </div>
+          <i class="fa-solid fa-angle-right"></i>
         </div>
       </div>
     </section>
